# gemini-evolve

./: .gitignore  README.md  README.zh.md  SPEC.md  pyproject.toml
.reports/: codemap-diff.txt
docs/: CONTRIB.md  EXAMPLES.md  FAQ.md  QUICKSTART.md  RUNBOOK.md
docs/CODEMAPS/: INDEX.md  core.md  integrations.md  triggers.md
gemini_evolve/: __init__.py  cli.py  cli_runner.py  config.py  constraints.py  dataset.py  dspy_adapter.py  evolve.py  fitness.py  gepa_evolve.py  json_utils.py  mutator.py  session_miner.py
gemini_evolve/triggers/: __init__.py  cron.py  hook.py  watcher.py
tests/: test_apply.py  test_cli_runner.py  test_constraints.py  test_dataset.py  test_dspy_adapter.py  test_fitness.py  test_gepa_evolve.py  test_hooks.py  test_json_utils.py  test_session_miner.py
