[project]
name = "gemini-evolve"
version = "0.1.0"
description = "Self-evolution system for Gemini CLI — automatically improve system instructions, commands, and skills"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gemini-evolve = "gemini_evolve.cli:main"

[tool.setuptools.packages.find]
include = ["gemini_evolve*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
